# rules_tap

./: .gitignore  Dockerfile  TODO.txt  docker-compose.yml  pyproject.toml  pyrightconfig.json  setup.cfg
django_app/config/: settings.py
django_app/org/: api.py  models.py  tests.py
django_app/org/migrations/: 0001_initial.py
django_app/rules_tap/: __init__.py  apps.py  create_migration.py  llm_use.py
django_app/rules_tap/context/: code.py  logger.py  main.py  test_case_logger.py  (+1 more)
live_responder/: Dockerfile  pyproject.toml  search_http.sh  test.sh
live_responder/embeddings/: common.py  save.py  search.py
live_responder/forwards/: Dockerfile  pyproject.toml
live_responder/forwards/server/: save.py  search.py
live_responder/live_responder/: config.py  logging.py  save.py  server.py  transpose.py
live_responder/live_responder/embeddings/: save.py  search.py
live_responder/live_responder/scripts/: gen_sql.py  save.py  search.py
live_responder/live_responder/server/: server.py
live_responder/live_responder/sql_gen/: gen_sql.py  transpose.py
live_responder/server/: do.py  search.py  server.py
live_responder/tests/: test_transpose.py
rules_tap/: apps.py  common.py
rules_tap/context/: common.py  main.py  sql_tables.py
rules_tap/embeddings/: common.py  save.py  search.py
rules_tap/safe_sandbox/: create_functions.py  create_migration.py
toy_django_project/: .bashrc  Dockerfile  pyproject.toml
toy_django_project/config/: asgi.py  settings.py  urls.py  wsgi.py
toy_django_project/org/: fixture.sql  models.py  sandbox.py  tests.py
(+37 files in other folders)
