[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django_project"
version = "0.1.0"
description = "Django project with PostgreSQL and DevContainers"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "django>=5.2.0",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.10",
]

[tool.uv]
