[metadata]
name = django_project
version = 0.1.0
description = Django project with PostgreSQL and DevContainers
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.8
packages = find:
install_requires =
    django>=5.0.2
    psycopg2-binary>=2.9.9
    gunicorn>=21.2.0 